Final java-7 related fixes